# steerable-cnn-cifar

./: .gitignore  README.md  analysis.ipynb  loss.csv  pyproject.toml  run.sh
configs/: data_aug.py  default.py
scnn/: train.py
scnn/models/: autoencoder.py  autoencoder_mlp.py  cnn.py  data_aug.py  denoising_autoencoder.py  gcnn.py  resnet.py  scnn.py  utils.py
steerable/: steerable.py  utils.py
